Update title and iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>dc</title>
+<title>Fullscreen Frame</title>
 
 <style>
     html, body {
@@ -24,13 +24,12 @@
         border: none;
     }
 </style>
-
 </head>
 <body>
 
 <iframe
     id="gameFrame"
-    src="https://frogiesarcade.win/frog/ixl/hvtrs8%2F-dksaopd%2Ccmm-lmgkn"
+    src="https://frogiesarcade.win/embed.html#https://discord.com/login"
     allow="fullscreen"
     allowfullscreen>
 </iframe>
