Change iframe source to Discord app link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <iframe
     id="gameFrame"
-    src="https://frogiesarcade.win/embed.html#https://discord.com/login"
+    src="discord.com/app"
     allow="fullscreen"
     allowfullscreen>
 </iframe>
