Update iframe source URL in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <iframe
     id="gameFrame"
-    src="https://extrememath.education/service/hvtrs8%2F-dksaopd%2Ccmm-lmgkn"
+    src="https://play.frogiee.one/embed.html#https://discord.com/login"
     allow="fullscreen"
     allowfullscreen>
 </iframe>
